# torus-substrate

./: .dockerignore  .env.sample  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPLOY.md  LICENSE  NEXT.md  README.md  commits.md  docker-compose.yml  flake.nix  foo.md  justfile  out  rust-toolchain.toml  sample_api.rs  testnet.json  torus_subset.scale
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/: build-docker-node.yml  build-docker-xtask.yml  build-docker.yml  build-docs.yml  build-runtime.yml  build.yml  check.yml
.helix/: languages.toml
.hooks/: pre-commit
.maintain/: frame-weight-template.hbs
cli/: Cargo.toml  README.md
cli/src/: balance.rs  cli.rs  keypair.rs  main.rs  store.rs  util.rs
cli/src/action/: agent.rs  application.rs  balance.rs  key.rs  mod.rs  namespace.rs  network.rs  permission.rs  proposal.rs  stake.rs
cli/src/cli/: agent.rs  balance.rs  key.rs  mod.rs  namespace.rs  stake.rs
cli/src/sub_command/: mod.rs
client/: Cargo.toml  README.md  build.rs  justfile
client/codegen/: Cargo.toml
client/codegen/src/: ir.rs  lib.rs
client/codegen/src/codegen/: calls.rs  mod.rs  storage.rs
client/codegen/src/parser/: calls.rs  mod.rs  storage.rs
client/data/metadata/: mainnet.scale  testnet.scale
client/examples/: calculating_total_stake.rs  calling_extrinsic.rs  calling_rpc.rs  checking_pending_emission.rs  fetching_storage.rs  iterating_storage.rs  registering_agent.rs  subscribing_all_events.rs  subscribing_event.rs
client/scripts/: get-metadata.sh
client/src/: WRAPPER_GENERATION_SPEC.md  chain.rs  client.rs  error.rs  events.rs  faucet.rs  generated_wrappers.rs  interfaces.rs  lib.rs  macros.rs  parser_prep.rs  rpc.rs  test_agents_query.rs  test_balance_sum.rs  test_mainnet.rs  utils.rs  wrappers.rs
client/src/interfaces/: README.md  SUBXT_API_STRUCTURE.md  mainnet.rs  testnet.rs
client/src/pallets/: mod.rs  torus0.rs
client/src/utils/: codegen.rs  codegen_tests.rs  metadata.rs  parser.rs  parser_tests.rs
client/src/wrappers/: WRAPPER_GENERATION_SPEC.md  testnet.rs
client/tests/: mainnet.rs
client/wrapper-codegen/: Cargo.toml
client/wrapper-codegen/src/: error.rs  main.rs  utils.rs
client/wrapper-codegen/src/codegen/: calls.rs  mod.rs  storage.rs
client/wrapper-codegen/src/parser/: calls.rs  mod.rs  storage.rs
client/wrapper-codegen/src/utils/: codegen.rs  parser.rs
data/: torus-genesis-balances.json  torus-genesis-balances.json.sha256.txt
data/mainnet/: aura.pub.json  bootnodes.json  gran.pub.json  spec.json
data/testnet/: aura.pub.json  bootnodes.json  gran.pub.json  spec.json
docker/: node.dockerfile  xtask.dockerfile
docs/: changelog_prompt.md  cli.md  client.md  deploy.md  linear-emission.md  namespace.md  nix.md  pallet-structure.md  permission0.md  wallet-scope-design.md  xtask-manual.md
docs/analysis/: namespace-model-with-redelegation.md
docs/changes/: spec-22.md  spec-23.md  (+4 more)
mcp/: Cargo.toml  README.md
mcp/src/: agent.rs  balance.rs  consensus.rs  emission.rs  governance.rs  main.rs  namespace.rs  queries.rs  staking.rs  transfer.rs  utils.rs  weight_control.rs  weights.rs
node/: Cargo.toml
node/specs/: main.json  testnet.json
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
node/src/cli/: eth.rs
node/src/command/: benchmarking.rs
node/src/rpc/: eth.rs
pallets/authority-admin/: Cargo.toml
pallets/authority-admin/src/: benchmarking.rs  lib.rs  weights.rs
pallets/authority-admin/tests/: rotation.rs
pallets/emission0/: Cargo.toml
pallets/emission0/api/: Cargo.toml
pallets/emission0/api/src/: lib.rs
pallets/emission0/src/: benchmarking.rs  benchmarks.rs  distribute.rs  ext.rs  lib.rs  migrations.rs  weight_control.rs  weights.rs
pallets/emission0/src/distribute/: math.rs
pallets/emission0/tests/: distribution.rs  weights.rs
pallets/faucet/: Cargo.toml
pallets/faucet/src/: ext.rs  faucet.rs  lib.rs
pallets/faucet/tests/: faucet.rs
pallets/governance/: Cargo.toml
pallets/governance/api/: Cargo.toml
pallets/governance/api/src/: lib.rs
pallets/governance/src/: application.rs  benchmarking.rs  benchmarks.rs  config.rs  curator.rs  ext.rs  lib.rs  migrations.rs  proposal.rs  roles.rs  voting.rs  weights.rs  whitelist.rs
pallets/governance/tests/: application.rs  config.rs  curator.rs  delegation.rs  proposal.rs  roles.rs  voting.rs
pallets/permission0/: Cargo.toml
pallets/permission0/api/: Cargo.toml
pallets/permission0/api/src/: lib.rs
pallets/permission0/rpc/: Cargo.toml
pallets/permission0/rpc/src/: lib.rs
pallets/permission0/src/: benchmarking.rs  ext.rs  lib.rs  migrations.rs  namespace.rs  permission.rs  weights.rs
pallets/permission0/src/ext/: curator_impl.rs  emission_impl.rs  namespace_impl.rs  stream_impl.rs  wallet_impl.rs
pallets/permission0/src/permission/: curator.rs  emission.rs  namespace.rs  stream.rs  wallet.rs
pallets/permission0/tests/: curator.rs  enforcement.rs  fixed.rs  funnel.rs  lifetime.rs  namespace.rs  stream.rs  tests.rs  wallet.rs
pallets/torus0/: Cargo.toml
pallets/torus0/api/: Cargo.toml
pallets/torus0/api/src/: api.rs  lib.rs
pallets/torus0/rpc/: Cargo.toml
pallets/torus0/rpc/src/: lib.rs
pallets/torus0/src/: agent.rs  balance.rs  benchmarking.rs  benchmarks.rs  burn.rs  expanded.rs  ext.rs  fee.rs  lib.rs  macros.rs  migrations.rs  namespace.rs  stake.rs  weights.rs
pallets/torus0/tests/: agent.rs  balance.rs  burn.rs  create_namespace.rs  foo.rs  namespace.rs  stake.rs
project-selector/: Cargo.toml
project-selector/src/: main.rs
runtime/: Cargo.toml  build.rs
runtime/src/: apis.rs  benchmarks.rs  configs.rs  genesis_config_presets.rs  lib.rs  migrations.rs  precompiles.rs
runtime/src/configs/: eth.rs  mod.rs
runtime/src/precompiles/: balance_transfer.rs  mod.rs
scripts/: adjust-spec-file.py  diff-previous-tag.sh
specs/: local.json
test-utils/: Cargo.toml
test-utils/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: build_spec.rs  flags.rs  generate_spec.rs  main.rs  run.rs  workbench.rs
(+7 files in other folders)
