[workspace]
members = ["node", "runtime", "pallets/*", "test-utils"]
resolver = "2"

[workspace.package]
authors = ["Luiz Carvalho <luizcmpc@gmail.com>"]
edition = "2021"

[workspace.dependencies]
# Local
torus-node = { path = "./node", default-features = false }
torus-runtime = { path = "./runtime", default-features = false }
pallet-governance = { path = "./pallets/governance", default-features = false }
pallet-torus0 = { path = "./pallets/torus0", default-features = false }

test-utils.path = "./test-utils"

# Substrate
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false }
scale-info = { version = "2.11.1", default-features = false }
polkadot-sdk = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2409-2", default-features = false }

# CLI-specific dependencies
clap = { version = "4.5.22", features = ["derive"] }
serde_json = { version = "1.0", default-features = false }

# RPC-specific dependencies
jsonrpsee = { version = "0.24", features = ["server"] }

# Async stuff
futures = "0.3"
futures-timer = "3"
