[workspace]
members = [
    "node",
    "runtime",
    "pallets/*",
    "pallets/*/api",
    "test-utils",
    "xtask",
]
resolver = "2"

[workspace.package]
authors = ["Renlabs <contact@renlabs.dev>"]
edition = "2021"

[workspace.dependencies]

# Local
torus-node = { path = "./node", default-features = false }
torus-runtime = { path = "./runtime", default-features = false }
pallet-governance = { path = "./pallets/governance", default-features = false }
pallet-governance-api = { path = "./pallets/governance/api", default-features = false }
pallet-emission0 = { path = "./pallets/emission0", default-features = false }
pallet-emission0-api = { path = "./pallets/emission0/api", default-features = false }
pallet-torus0 = { path = "./pallets/torus0", default-features = false }
pallet-torus0-api = { path = "./pallets/torus0/api", default-features = false }
test-utils.path = "./test-utils"

# Substrate
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false }
scale-info = { version = "2.11.1", default-features = false }
polkadot-sdk = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2409", default-features = false }
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2409", default-features = false }

# Utils
num-traits = { version = "0.2.19", default-features = false, features = [
    "libm",
] }

# Frontier / EVM
fc-api = { git = "https://github.com/paritytech/frontier.git", rev = "b9b1c620c8b418bdeeadc79725f9cfa4703c0333" }
fc-cli = { git = "https://github.com/paritytech/frontier.git", rev = "b9b1c620c8b418bdeeadc79725f9cfa4703c0333" }
fc-consensus = { git = "https://github.com/paritytech/frontier.git", rev = "b9b1c620c8b418bdeeadc79725f9cfa4703c0333" }
fc-db = { git = "https://github.com/paritytech/frontier.git", rev = "b9b1c620c8b418bdeeadc79725f9cfa4703c0333" }
fc-mapping-sync = { git = "https://github.com/paritytech/frontier.git", rev = "b9b1c620c8b418bdeeadc79725f9cfa4703c0333" }
fc-rpc = { git = "https://github.com/paritytech/frontier.git", rev = "b9b1c620c8b418bdeeadc79725f9cfa4703c0333" }
fc-rpc-core = { git = "https://github.com/paritytech/frontier.git", rev = "b9b1c620c8b418bdeeadc79725f9cfa4703c0333" }
fc-storage = { git = "https://github.com/paritytech/frontier.git", rev = "b9b1c620c8b418bdeeadc79725f9cfa4703c0333" }
fp-account = { git = "https://github.com/paritytech/frontier.git", rev = "b9b1c620c8b418bdeeadc79725f9cfa4703c0333" }
fp-dynamic-fee = { git = "https://github.com/paritytech/frontier.git", rev = "b9b1c620c8b418bdeeadc79725f9cfa4703c0333", default-features = false }
fp-evm = { git = "https://github.com/paritytech/frontier.git", rev = "b9b1c620c8b418bdeeadc79725f9cfa4703c0333", default-features = false }
fp-rpc = { git = "https://github.com/paritytech/frontier.git", rev = "b9b1c620c8b418bdeeadc79725f9cfa4703c0333", default-features = false }
fp-self-contained = { git = "https://github.com/paritytech/frontier.git", rev = "b9b1c620c8b418bdeeadc79725f9cfa4703c0333", default-features = false }
pallet-ethereum = { git = "https://github.com/paritytech/frontier.git", rev = "b9b1c620c8b418bdeeadc79725f9cfa4703c0333", default-features = false }
pallet-evm = { git = "https://github.com/paritytech/frontier.git", rev = "b9b1c620c8b418bdeeadc79725f9cfa4703c0333", default-features = false }
pallet-evm-chain-id = { git = "https://github.com/paritytech/frontier.git", rev = "b9b1c620c8b418bdeeadc79725f9cfa4703c0333", default-features = false }
pallet-evm-precompile-modexp = { git = "https://github.com/paritytech/frontier.git", rev = "b9b1c620c8b418bdeeadc79725f9cfa4703c0333", default-features = false }
pallet-evm-precompile-sha3fips = { git = "https://github.com/paritytech/frontier.git", rev = "b9b1c620c8b418bdeeadc79725f9cfa4703c0333", default-features = false }
pallet-evm-precompile-simple = { git = "https://github.com/paritytech/frontier.git", rev = "b9b1c620c8b418bdeeadc79725f9cfa4703c0333", default-features = false }

# CLI
clap = { version = "4.5.22", features = ["derive"] }
serde_json = { version = "1.0", default-features = false }

# RPC
jsonrpsee = { version = "0.24", features = ["server"] }

# Async
futures = "0.3"
futures-timer = "3"
