[package]
name = "torus-cli"
version = "0.1.0"
edition = "2021"
authors = ["Renlabs <contact@renlabs.dev>"]
description = "Torus chain cli using torus client"
license = "MIT"


[dependencies]
base64 = { version = "0.22.1" }
anyhow = "1.0.99"
bip39 = { version = "2.2.0", features = ["rand"] }
blake2 = "0.10.6"
clap = { version = "4.5.46", features = ["derive"] }
home = "0.5.11"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
torus-client = { path = "../client", features = ["std", "mainnet", "testnet"] }
tokio = { version = "1.47.1", features = ["macros", "rt"] }
tracing = "0.1.41"
inquire = "0.7.5"
tabled = "0.20.0"
sp-core = "38.0.0"
rpassword = "7.4.0"
rand = "0.9.2"
nacl = "0.5.3"

[features]
