[package]
name = "torus-mcp"
version = "0.1.0"
edition = "2024"

[features]
default = ["testnet"]

testnet = ["torus-client/testnet"]
devnet = ["torus-client/devnet"]

[dependencies]
rmcp = { version = "0.4.1", features = ["macros", "transport-io"] }
torus-client = { path = "../client" }
schemars = "1.0.4"
serde = "1.0.219"
serde_json = "1.0.141"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
