[package]
name = "torus-mcp"
version = "0.1.0"
edition = "2024"

[features]
default = ["testnet"]

testnet = ["torus-client/testnet"]
devnet = ["torus-client/devnet"]

[dependencies]
lazy_static = { workspace = true }
rmcp = { workspace = true, features = ["macros", "transport-io"] }
torus-client = { path = "../client" }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
