[package]
name = "torus-node"
description = "The Torus substrate node implementation"
version = "0.1.0"
license = "MIT-0"
authors.workspace = true
edition.workspace = true

[features]
default = ["std"]
std = ["torus-runtime/std", "polkadot-sdk/std"]

[dependencies]
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true, features = ["thread-pool"] }
futures-timer.workspace = true
jsonrpsee = { workspace = true, features = ["server"] }
polkadot-sdk = { workspace = true, features = [
    "std",
    "sc-allocator",
    "sc-authority-discovery",
    "sc-basic-authorship",
    "sc-block-builder",
    "sc-chain-spec",
    "sc-cli",
    "sc-client-api",
    "sc-client-db",
    "sc-consensus",
    "sc-consensus-aura",
    "sc-consensus-epochs",
    "sc-consensus-grandpa",
    "sc-consensus-grandpa-rpc",
    "sc-consensus-manual-seal",
    "sc-consensus-pow",
    "sc-consensus-slots",
    "sc-executor",
    "sc-executor-wasmtime",
    "sc-informant",
    "sc-keystore",
    "sc-network",
    "sc-network-common",
    "sc-network-gossip",
    "sc-network-statement",
    "sc-network-sync",
    "sc-network-transactions",
    "sc-network-types",
    "sc-offchain",
    "sc-proposer-metrics",
    "sc-rpc",
    "sc-rpc-api",
    "sc-rpc-server",
    "sc-rpc-spec-v2",
    "sc-service",
    "sc-state-db",
    "sc-statement-store",
    "sc-storage-monitor",
    "sc-sync-state-rpc",
    "sc-sysinfo",
    "sc-telemetry",
    "sc-tracing",
    "sc-transaction-pool",
    "sc-transaction-pool-api",
    "sc-utils",
    "sp-blockchain",
    "sp-consensus",
    "sp-core-hashing",
    "sp-core-hashing-proc-macro",
    "sp-database",
    "sp-maybe-compressed-blob",
    "sp-panic-handler",
    "sp-rpc",
    "staging-chain-spec-builder",
    "staging-node-inspect",
    "staging-tracking-allocator",
    "subkey",
    "substrate-frame-rpc-support",
    "substrate-frame-rpc-system",
    "substrate-prometheus-endpoint",
    "substrate-rpc-client",
] }
serde_json = { workspace = true, default-features = true }

torus-runtime.workspace = true

[build-dependencies]
polkadot-sdk = { workspace = true, features = ["substrate-build-script-utils"] }
