[package]
name = "torus-node"
description = "Torus Substrate Node"
version = "0.2.0"
license = "MIT-0"
authors.workspace = true
edition.workspace = true

[features]
default = ["std"]
std = ["torus-runtime/std", "polkadot-sdk/std"]
runtime-benchmarks = [
    "torus-runtime/runtime-benchmarks",
    "polkadot-sdk/runtime-benchmarks",
]
testnet = ["torus-runtime/testnet"]

[dependencies]

clap = { workspace = true, features = ["derive"] }
futures = { workspace = true, features = ["thread-pool"] }
futures-timer.workspace = true
jsonrpsee = { workspace = true, features = ["server"] }
serde_json = { workspace = true, default-features = true }

# Substrate
polkadot-sdk = { workspace = true, features = [
    "std",
    "frame-benchmarking-cli",
    "sc-allocator",
    "sc-authority-discovery",
    "sc-basic-authorship",
    "sc-block-builder",
    "sc-chain-spec",
    "sc-cli",
    "sc-client-api",
    "sc-client-db",
    "sc-consensus",
    "sc-consensus-aura",
    "sc-consensus-epochs",
    "sc-consensus-grandpa",
    "sc-consensus-grandpa-rpc",
    "sc-consensus-manual-seal",
    "sc-consensus-pow",
    "sc-consensus-slots",
    "sc-executor",
    "sc-executor-wasmtime",
    "sc-informant",
    "sc-keystore",
    "sc-network",
    "sc-network-common",
    "sc-network-gossip",
    "sc-network-statement",
    "sc-network-sync",
    "sc-network-transactions",
    "sc-network-types",
    "sc-offchain",
    "sc-proposer-metrics",
    "sc-rpc",
    "sc-rpc-api",
    "sc-rpc-server",
    "sc-rpc-spec-v2",
    "sc-service",
    "sc-state-db",
    "sc-statement-store",
    "sc-storage-monitor",
    "sc-sync-state-rpc",
    "sc-sysinfo",
    "sc-telemetry",
    "sc-tracing",
    "sc-transaction-pool",
    "sc-transaction-pool-api",
    "sc-utils",
    "sp-blockchain",
    "sp-consensus",
    "sp-core-hashing",
    "sp-core-hashing-proc-macro",
    "sp-database",
    "sp-maybe-compressed-blob",
    "sp-panic-handler",
    "sp-rpc",
    "pallet-transaction-payment-rpc",
    "staging-chain-spec-builder",
    "staging-node-inspect",
    "staging-tracking-allocator",
    "subkey",
    "substrate-frame-rpc-support",
    "substrate-frame-rpc-system",
    "substrate-prometheus-endpoint",
    "substrate-rpc-client",
] }

# Frontier / EVM
fc-api.workspace = true
fc-cli.workspace = true
fc-consensus.workspace = true
fc-db.workspace = true
fc-mapping-sync.workspace = true
fc-rpc = { workspace = true, features = [
    "txpool",
    "rpc-binary-search-estimate",
] }
fc-rpc-core.workspace = true
fc-storage.workspace = true
fp-account.workspace = true
fp-dynamic-fee = { workspace = true, features = ["default"] }
fp-evm = { workspace = true, features = ["default"] }
fp-rpc = { workspace = true, features = ["default"] }

# Local
torus-runtime.workspace = true
pallet-permission0-rpc.workspace = true
pallet-torus0-rpc.workspace = true

[build-dependencies]
polkadot-sdk = { workspace = true, features = ["substrate-build-script-utils"] }
