[package]
name = "torus-runtime"
description = "The torus blockchain runtime."
version = "0.1.0"
license = "MIT-0"
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
codec = { workspace = true, features = ["derive"] }
scale-info = { features = ["derive", "serde"], workspace = true }
smallvec.workspace = true
serde_json = { workspace = true, features = ["alloc"] }

# Polkadot SDK
polkadot-sdk = { workspace = true, features = [
    "runtime",
    "pallet-balances",
    "pallet-sudo",
    "pallet-multisig",
    "pallet-aura",
    "pallet-grandpa",
    "pallet-timestamp",
    "pallet-transaction-payment",
    "pallet-transaction-payment-rpc-runtime-api",
    "frame-executive",
    "frame-support",
    "frame-system",
    "frame-try-runtime",
    "frame-system-benchmarking",
    "frame-benchmarking",
    "frame-metadata-hash-extension",
    "frame-system-rpc-runtime-api",
    "substrate-wasm-builder",
] }

# Local dependencies
pallet-torus0.workspace = true

[build-dependencies]
polkadot-sdk = { optional = true, workspace = true, features = [
    "substrate-wasm-builder",
] }

[features]
default = ["std"]
std = [
    "codec/std",
    "polkadot-sdk/std",
    "scale-info/std",
    "serde_json/std",
    "pallet-torus0/std",
]

runtime-benchmarks = ["polkadot-sdk/runtime-benchmarks"]

try-runtime = ["polkadot-sdk/try-runtime"]
