[package]
name = "torus-runtime"
description = "The torus blockchain runtime."
version = "0.1.0"
license = "MIT-0"
authors.workspace = true
edition.workspace = true

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "serde_json/std",

    "polkadot-sdk/std",
    "pallet-torus0/std",
    "pallet-governance/std",

    # Frontier
    "fp-evm/std",
    "fp-rpc/std",
    "fp-self-contained/std",
    "pallet-base-fee/std",
    "pallet-dynamic-fee/std",
    "pallet-ethereum/std",
    "pallet-evm/std",
    "pallet-evm-chain-id/std",
    "pallet-evm-precompile-modexp/std",
    "pallet-evm-precompile-sha3fips/std",
    "pallet-evm-precompile-simple/std",
]
runtime-benchmarks = [
    "polkadot-sdk/runtime-benchmarks",
    "pallet-torus0/runtime-benchmarks",
    "pallet-governance/runtime-benchmarks",

    # Frontier
    "pallet-ethereum/runtime-benchmarks",
    "pallet-evm/runtime-benchmarks",
]
try-runtime = [
    "polkadot-sdk/try-runtime",
    "pallet-torus0/try-runtime",
    "pallet-governance/try-runtime",
]

[dependencies]
codec = { workspace = true, features = ["derive"] }
scale-info = { features = ["derive", "serde"], workspace = true }
serde_json = { workspace = true, features = ["alloc"] }

# Polkadot SDK
polkadot-sdk = { workspace = true, features = [
    "runtime",
    "pallet-balances",
    "pallet-sudo",
    "pallet-multisig",
    "pallet-aura",
    "pallet-grandpa",
    "pallet-timestamp",
    "pallet-transaction-payment",
    "pallet-transaction-payment-rpc-runtime-api",
] }

# Frontier
fp-evm = { workspace = true, features = ["serde"] }
fp-rpc.workspace = true
fp-self-contained = { workspace = true, features = ["serde"] }
pallet-base-fee.workspace = true
pallet-dynamic-fee.workspace = true
pallet-ethereum.workspace = true
pallet-evm.workspace = true
pallet-evm-chain-id.workspace = true
pallet-evm-precompile-modexp.workspace = true
pallet-evm-precompile-sha3fips.workspace = true
pallet-evm-precompile-simple.workspace = true

# Local dependencies
pallet-torus0.workspace = true
pallet-governance.workspace = true

[build-dependencies]
polkadot-sdk = { optional = true, workspace = true, features = [
    "std",
    "substrate-wasm-builder",
] }
