[package]
name = "torus-runtime"
description = "Torus blockchain runtime."
version = "0.1.0"
license = "MIT-0"
authors.workspace = true
edition.workspace = true

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "serde_json/std",

    "substrate-wasm-builder",

    "polkadot-sdk/std",
    "pallet-torus0/std",
    "pallet-emission0/std",
    "pallet-governance/std",
    "pallet-permission0/std",

    # Frontier
    "fp-evm/std",
    "fp-rpc/std",
    "fp-self-contained/std",
    "pallet-ethereum/std",
    "pallet-evm/std",
    "pallet-evm-chain-id/std",
    "pallet-evm-precompile-modexp/std",
    "pallet-evm-precompile-sha3fips/std",
    "pallet-evm-precompile-simple/std",
]
runtime-benchmarks = [
    "polkadot-sdk/runtime-benchmarks",
    "pallet-torus0/runtime-benchmarks",
    "pallet-emission0/runtime-benchmarks",
    "pallet-governance/runtime-benchmarks",
    "pallet-permission0/runtime-benchmarks",

    # Frontier
    "pallet-ethereum/runtime-benchmarks",
    "pallet-evm/runtime-benchmarks",
]
try-runtime = [
    "polkadot-sdk/try-runtime",
    "pallet-torus0/try-runtime",
    "pallet-emission0/try-runtime",
    "pallet-governance/try-runtime",
    "pallet-permission0/try-runtime",

    # Frontier
    "fp-self-contained/try-runtime",
]


[dependencies]

serde_json = { workspace = true, features = ["alloc"] }

# Substrate
codec = { workspace = true, features = ["derive"] }
scale-info = { features = ["derive", "serde"], workspace = true }
polkadot-sdk = { workspace = true, features = [
    "runtime",
    "pallet-balances",
    "pallet-sudo",
    "pallet-multisig",
    "pallet-aura",
    "pallet-grandpa",
    "pallet-timestamp",
    "pallet-transaction-payment",
    "pallet-transaction-payment-rpc-runtime-api",
    "frame-metadata-hash-extension",
] }

# Frontier / EVM
fp-evm = { workspace = true, features = ["serde"] }
fp-rpc.workspace = true
fp-self-contained = { workspace = true, features = ["serde"] }
pallet-ethereum.workspace = true
pallet-evm.workspace = true
pallet-evm-chain-id.workspace = true
pallet-evm-precompile-modexp.workspace = true
pallet-evm-precompile-sha3fips.workspace = true
pallet-evm-precompile-simple.workspace = true

# Local
pallet-torus0.workspace = true
pallet-emission0.workspace = true
pallet-governance.workspace = true
pallet-permission0.workspace = true

pallet-torus0-api.workspace = true
pallet-governance-api.workspace = true
pallet-permission0-api.workspace = true


[build-dependencies]
substrate-wasm-builder = { optional = true, workspace = true, features = [
    "metadata-hash",
] }
