[package]
name = "test-utils"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
codec.workspace = true
scale-info.workspace = true
polkadot-sdk = { workspace = true, features = [
    "std",
    "runtime",
    "pallet-balances",
] }

pallet-governance.workspace = true
pallet-torus0.workspace = true
pallet-emission0.workspace = true
pallet-permission0.workspace = true
pallet-faucet.workspace = true

pallet-torus0-api.workspace = true
pallet-governance-api.workspace = true
