[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
xflags = "0.3.2"
hex = "0.4.3"
hex-literal = "0.4.1"
tokio = { version = "1.0", features = ["full"] }
parity-scale-codec = { version = "3.6.1", features = ["derive"] }
polkadot-sdk = { workspace = true, features = [
    "std",
    "sp-keyring",
    "sp-core",
    "sp-runtime",
    "sc-service",
    "sc-client-api",
    "frame-remote-externalities",
    "sp-crypto-hashing",
] }
tempfile = "3.14.0"
serde_json = { version = "1", features = ["arbitrary_precision"] }
