[package]
name = "pallet-authority-admin"
description = "Administrative pallet for rotating solo-chain consensus authorities."
version = "0.1.0"
license = "MIT-0"
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[features]
default = ["std"]
std = ["codec/std", "polkadot-sdk/std", "scale-info/std"]
runtime-benchmarks = ["polkadot-sdk/runtime-benchmarks"]
try-runtime = ["polkadot-sdk/try-runtime"]

[dependencies]
codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
polkadot-sdk = { workspace = true, features = [
    "experimental",
    "runtime",
    "pallet-aura",
    "pallet-grandpa",
] }

[dev-dependencies]
polkadot-sdk = { workspace = true, features = ["pallet-timestamp"] }
