[package]
name = "pallet-emission0"
description = "The chain's emission pallet."
version = "0.1.0"
license = "MIT-0"
authors.workspace = true
edition.workspace = true

[features]
default = ["std"]
std = [
    "codec/std",
    "polkadot-sdk/std",
    "scale-info/std",
    "substrate-fixed/std",
    "pallet-torus0-api/std",
    "num-traits/std",
]
runtime-benchmarks = [
    "polkadot-sdk/runtime-benchmarks",
    "pallet-torus0-api/runtime-benchmarks",
]
try-runtime = ["polkadot-sdk/try-runtime"]

[dependencies]
codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
polkadot-sdk = { workspace = true, features = ["experimental", "runtime"] }
substrate-fixed.workspace = true

num-traits.workspace = true

pallet-torus0-api.workspace = true
pallet-emission0-api.workspace = true
pallet-governance-api.workspace = true

[dev-dependencies]
test-utils.workspace = true
