[package]
name = "pallet-faucet"
description = "Testnet faucet pallet for the Torus network. Allows users to get test tokens by performing proof-of-work."
version = "0.1.0"
license = "MIT-0"
authors.workspace = true
edition.workspace = true

[features]
default = ["std"]
std = ["codec/std", "polkadot-sdk/std", "scale-info/std"]
runtime-benchmarks = ["polkadot-sdk/runtime-benchmarks"]
try-runtime = ["polkadot-sdk/try-runtime"]
testnet = []

[dependencies]
codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
polkadot-sdk = { workspace = true, features = [
    "experimental",
    "runtime",
    "pallet-balances",
] }

pallet-torus0-api.workspace = true

[dev-dependencies]
pallet-governance.workspace = true
pallet-torus0.workspace = true
pallet-emission0.workspace = true
pallet-permission0.workspace = true
pallet-governance-api.workspace = true
