[package]
name = "pallet-governance"
description = "The chain's governance pallet."
version = "0.1.0"
license = "MIT-0"
authors.workspace = true
edition.workspace = true

[features]
default = ["std"]
std = ["codec/std", "polkadot-sdk/std", "scale-info/std"]

[dependencies]
codec = { workspace = true, features = ["derive"] }
pallet-torus0 = { workspace = true }
polkadot-sdk = { workspace = true, features = ["experimental", "runtime"] }
scale-info = { workspace = true, features = ["derive"] }
