[package]
name = "pallet-governance"
description = "Torus governance pallet."
version = "0.1.0"
license = "MIT-0"
authors.workspace = true
edition.workspace = true

[lints]
workspace = true

[features]
default = ["std"]
std = [
    "codec/std",
    "polkadot-sdk/std",
    "scale-info/std",
    "pallet-torus0/std",
    "pallet-emission0/std",
]
runtime-benchmarks = [
    "polkadot-sdk/runtime-benchmarks",
    "pallet-torus0/runtime-benchmarks",
    "pallet-emission0/runtime-benchmarks",

    "pallet-torus0-api/runtime-benchmarks",
]
try-runtime = [
    "polkadot-sdk/try-runtime",
    "pallet-torus0/try-runtime",
    "pallet-emission0/try-runtime",
]


[dependencies]
codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
polkadot-sdk = { workspace = true, features = [
    "experimental",
    "runtime",
    "pallet-sudo",
] }

pallet-torus0.workspace = true
pallet-emission0.workspace = true

pallet-governance-api.workspace = true
pallet-torus0-api.workspace = true
pallet-permission0-api.workspace = true

[dev-dependencies]
test-utils.workspace = true
pallet-permission0.workspace = true
