[package]
name = "pallet-permission0"
version = "0.1.0"
description = "Permission contract pallet for Torus network"
authors.workspace = true
edition.workspace = true
license = "MIT-0"

[features]
default = ["std"]
std = [
    "codec/std",
    "polkadot-sdk/std",
    "scale-info/std",
    "pallet-permission0-api/std",
    "pallet-torus0-api/std",
    "pallet-emission0-api/std",
]
runtime-benchmarks = [
    "polkadot-sdk/runtime-benchmarks",
    "pallet-torus0-api/runtime-benchmarks",
    "pallet-emission0-api/runtime-benchmarks",
]
try-runtime = ["polkadot-sdk/try-runtime"]

[dependencies]
codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
polkadot-sdk = { workspace = true, features = ["experimental", "runtime"] }
bitflags = { workspace = true, default-features = false }

# Local dependencies
pallet-permission0-api = { workspace = true, default-features = false }
pallet-torus0-api = { workspace = true, default-features = false }
pallet-emission0-api = { workspace = true, default-features = false }

[dev-dependencies]
test-utils.workspace = true
