[package]
name = "pallet-torus0"
description = "The torus initial pallet."
version = "0.1.0"
license = "MIT-0"
authors.workspace = true
edition.workspace = true

[features]
default = ["std"]
std = [
    "codec/std",
    "polkadot-sdk/std",
    "scale-info/std",
    "pallet-torus0-api/std",
]
runtime-benchmarks = [
    "polkadot-sdk/runtime-benchmarks",
    "pallet-torus0-api/runtime-benchmarks",
]
try-runtime = ["polkadot-sdk/try-runtime", "pallet-torus0-api/try-runtime"]

[dependencies]
codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
polkadot-sdk = { workspace = true, features = ["experimental", "runtime"] }

pallet-torus0-api.workspace = true

[dev-dependencies]
test-utils.workspace = true
