[package]
name = "pallet-emission0-api"
description = "The chain's emission pallet API."
version = "0.1.0"
license = "MIT-0"
authors.workspace = true
edition.workspace = true

[features]
default = ["std"]
std = ["polkadot-sdk/std"]
runtime-benchmarks = ["polkadot-sdk/runtime-benchmarks"]
try-runtime = ["polkadot-sdk/try-runtime"]

[dependencies]
polkadot-sdk = { workspace = true, features = ["sp-runtime"] }
