[package]
name = "pallet-permission0-api"
version = "0.1.0"
description = "API for permission0 pallet"
authors.workspace = true
edition.workspace = true
license = "MIT-0"

[features]
default = ["std"]
std = [
    "codec/std",
    "polkadot-sdk/std",
    "scale-info/std",
    "pallet-torus0-api/std",
]
runtime-benchmarks = [
    "polkadot-sdk/runtime-benchmarks",
    "pallet-torus0-api/runtime-benchmarks",
]
try-runtime = ["polkadot-sdk/try-runtime"]

[dependencies]
codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
polkadot-sdk = { workspace = true, features = ["experimental", "runtime"] }
pallet-torus0-api = { workspace = true, default-features = false }
